# 418-vehicle-maintenance-tracker

./: .gitignore  CLAUDE.md
apps/: CLAUDE.md
apps/biombo/: CLAUDE.md
checkpoint/: package.json
checkpoint-app/: CLAUDE.md  CheckpointWatch.entitlements
checkpoint-app/CheckpointWatch/: ContentView.swift
checkpoint-app/CheckpointWatchTests/: WatchDataStoreTests.swift  WatchServiceDataTests.swift
checkpoint-app/CheckpointWatchWidget/: WatchWidgetProvider.swift
checkpoint-app/CheckpointWidget/: CLAUDE.md  CheckpointWidget.entitlements  CheckpointWidget.swift  CheckpointWidgetBundle.swift  CheckpointWidgetIntent.swift  (+6 more)
checkpoint-website/: CLAUDE.md
docs/: AESTHETIC.md  APP_STORE_CONNECT.md  APP_STORE_STRATEGY.md  ARCHITECTURE.md  BIOMBO_IMPLEMENTATION_PLAN.md  DATA_RELIABILITY.md  DEFERRED_PLATFORMS.md  DESIGN_SYSTEM.md  FEATURES.md  FUEL_PRICE_TRACKER.md  GAP_ANALYSIS.md  MARKET_RESEARCH.md  MILEAGE_ESTIMATION_TUNING.md  MONETIZATION.md  NOTIFICATION_TONE.md  ONBOARDING.md  POSTHOG_DASHBOARDS.md  ROADMAP.md  SCREENSHOT_CREATIVE_DIRECTION.md  UNITS_AND_INTERVALS.md  screenshot-mockups-v2.html  screenshot-mockups.html
scripts/: add_biombo_ui_test_target.rb  add_designkit_to_checkpoint.rb  configure_biombo_api_url.rb  create_biombo_xcodeproj.rb  generate_biombo_icon.swift  migrate_checkpoint_localization.rb  recreate_biombo_scheme.rb  wire_biombo_infoplist.rb
tools/depth-backdrops/backend/: pyproject.toml
tools/depth-backdrops/backend/app/: cache.py  depth.py  main.py  presets.py  sources.py
tools/depth-backdrops/backend/scripts/: download_model.py
(+809 files in other folders)
