[project]
name = "depth-backdrops-backend"
version = "0.1.0"
description = "Depth-map inference backend for App Store backdrop generation"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.12",
    "pillow>=11.0",
    "numpy>=2.0",
    "coremltools>=8.1",
    "huggingface-hub>=0.26",
]

[tool.uv]
package = false
